--- a/Credimmo/www/style.css
+++ b/Credimmo/www/style.css
@@ -1,3 +1,3 @@
 body {
-  background-color: #D3D6CF; /* Replace with your desired color */
+  background-color: #D3D6CF; /* Couleur du fond de la page */
 }
