Changement de style des radios buttons (nécessite shinyWidgets)

--- a/Credimmo/www/style.css
+++ b/Credimmo/www/style.css
@@ -18,3 +18,8 @@ body {
   border-color: black;
   color: black;
 }
+.btn-radio{
+  color: #fff;
+  background-color: grey;
+  border-color: grey;
+}
